# MCRewrite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/glew/: glew.pc
libs/rlFPCamera/: rlFPCamera.h
src/: AABB.cpp  AABB.hpp  AssetManager.cpp  AssetManager.hpp  Chunk.cpp  Chunk.hpp  HitResult.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  Timer.cpp  Timer.hpp  includes.hpp  logger.hpp  main.cpp  utils.hpp
